--- a/!קראו אותי.md
+++ b/!קראו אותי.md
@@ -1,6 +1,9 @@
 # data-over-sound
 הפרוייקט הזה הוא אחד מהמועדפים עליי וההוראות לשימוש מחולקת למספר חלקיםץ הקבצים העיקריים הם joinAudio.py ו- noteDetection.py
 
+ראשית כל, לפני שפותחים כל קובץ בפרוייקט חשוב מאוד להוריד את הספריות הנדרשות. ניתן לעשות זאת באמצעות הפקודה: pip -r install requirements.txt ב - cmd.
+הקובץ נמצא בתוך התיקייה אזה חשוב לפתוח גם את cmd באותה תיקייה. כאשר כל הספריות מוכנות, ניתן לגשת לפרוייקט בהצלחה.
+
 החלק הראשון
 ראשית, בשביל ליצור את קובץ הסאונד שאנו רוצים לשמוע נשתמש בקובץ joinAudio.py. לאחר הרצת הקובץ נראה שאנו צריכים להקליד משפט. התוכנית מעבירה את המשפט לקוד בינארי, ממירה כל 0,1 לסאונד
 ומחברת את הכל לקובץ אודיו אחד. אפשר להסתכל על הקובץ בשם output.wav ולשמוע אותו.
