--- a/!קראו אותי.md
+++ b/!קראו אותי.md
@@ -1,7 +1,7 @@
 # data-over-sound
 הפרוייקט הזה הוא אחד מהמועדפים עליי וההוראות לשימוש מחולקת למספר חלקיםץ הקבצים העיקריים הם joinAudio.py ו- noteDetection.py
 
-ראשית כל, לפני שפותחים כל קובץ בפרוייקט חשוב מאוד להוריד את הספריות הנדרשות. ניתן לעשות זאת באמצעות הפקודה: pip -r install requirements.txt ב - cmd.
+ראשית כל, לפני שפותחים כל קובץ בפרוייקט חשוב מאוד להוריד את הספריות הנדרשות. ניתן לעשות זאת באמצעות הפקודה: pip install -r requirements.txt ב - cmd.
 הקובץ נמצא בתוך התיקייה אזה חשוב לפתוח גם את cmd באותה תיקייה. כאשר כל הספריות מוכנות, ניתן לגשת לפרוייקט בהצלחה.
 
 החלק הראשון
